--- a/login.html
+++ b/login.html
@@ -4,11 +4,6 @@
   <meta charset="UTF-8">
   <title>Login - Weather App</title>
   <link rel="stylesheet" href="style2.css">
-  <style>
-    label{
-        display: block;
-    }
-  </style>
 </head>
 <body>
   <div class="form-container">
@@ -20,8 +15,8 @@
       <input type="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account?<br> <a href="register.php">Register here</a></p>
-    <p><a href="home.php">← Back to Home</a></p>
+    <p>Don't have an account?<br> <a href="register.html">Register here</a></p>
+    <p><a href="home.html">← Back to Home</a></p>
   </div>
 </body>
 </html>
