--- a/login.html
+++ b/login.html
@@ -8,11 +8,11 @@
 <body>
   <div class="form-container">
     <h2>Login</h2>
-    <form action="#" method="post">
+    <form action="login.php" method="post">
         <label for="email">Email</label>
-      <input type="text" placeholder="Username or Email" required>
+      <input type="text" placeholder="Username or Email" name="email" required>
       <label for="password">Password</label>
-      <input type="password" placeholder="Password" required><br>
+      <input type="password" placeholder="Password" name="password" required><br>
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account?<br> <a href="register.html">Register here</a></p>
