--- a/home.html
+++ b/home.html
@@ -14,12 +14,15 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #4CAF50, #2196F3);
+      background: url("https://th.bing.com/th/id/OIP.RYIHSBcDzRLyBGF8CvCGYAHaEo?rs=1&pid=ImgDetMain&cb=idpwebp2&o=7&rm=3")
       color: #fff;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
+        background-repeat:no-repeat;
+    background-position:center;
+    background-size: cover;
     }
 
     .container {
